# data-platform

./: .dockerignore  .env.example  .gitignore  Jenkinsfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/argocd/: application-local.yaml
deploy/helm/data-platform/: Chart.yaml  values-dev.yaml  values-local.yaml  values-production.yaml  values-staging.yaml  values.yaml
deploy/helm/data-platform/templates/: _helpers.tpl  config.yaml  frontend.yaml  ingress.yaml  migrate-job.yaml  networkpolicy.yaml  rollout.yaml  services.yaml  workers.yaml
deploy/kind/: infra-local.yaml  kind-config.yaml
docker/: Dockerfile
docs/architecture/: README.md  decisions.md  interview-qa.md  phases.md  runbook.md
frontend/: .dockerignore  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package.json  tailwind.config.js
frontend/public/: config.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Layout.tsx  ui.tsx
frontend/src/lib/: api.ts  config.ts  types.ts
frontend/src/pages/: ConnectorsPage.tsx  JobsPage.tsx  LoginPage.tsx  SearchPage.tsx  UploadPage.tsx
frontend/src/store/: auth.tsx
jenkins/: Dockerfile  README.md  docker-compose.yml  plugins.txt
libs/platform_core/platform_core/: __init__.py  app_factory.py  auth_deps.py  cache.py  config.py  db.py  embeddings.py  logging.py  middleware.py  models.py  pipeline.py  reliability.py  schemas.py  search.py  security.py  telemetry.py  text.py
libs/platform_core/platform_core/connectors/: __init__.py  base.py  csv_connector.py  mysql_connector.py  pdf_connector.py  postgres_connector.py  registry.py  rest_connector.py  s3_connector.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
observability/: alerts.yml  otel-collector.yaml  prometheus.yml
observability/grafana/dashboards/: platform-overview.json
observability/grafana/provisioning/dashboards/: dashboards.yml
scripts/: seed.py
services/gateway/app/: main.py
services/gateway/app/routers/: apikeys.py  auth.py  connectors.py
services/ingestion/app/: main.py
services/ingestion/app/routers/: jobs.py  upload.py
services/retrieval/app/: main.py
services/retrieval/app/routers/: search.py
tests/: conftest.py
tests/chaos/: pod-kill.yaml
tests/integration/: test_api_flow.py
tests/load/: search_load.js
tests/unit/: test_connectors.py  test_reliability.py  test_search_and_embeddings.py  test_security.py  test_text.py
workers/: celery_app.py  tasks.py
